@@ -9,6 +9,7 @@ git-annex (8.20200502) UNRELEASED; urgency=medium
   * repair: Improve fetching from a remote with an url in host:path format.
   * sync: Avoid an ugly error message when nothing has been committed to
     master yet and there is a synced master branch to merge from.
+  * upgrade: When upgrade fails due to an exception, display it.
 
  -- Joey Hess <id@joeyh.name>  Mon, 04 May 2020 12:46:11 -0400
 
